# mysite

./: README.md  分析系统设计.xmind
fastapi-project/: pyproject.toml
fastapi-project/app/: main.py  pyproject.toml
fastapi-project/app/config/: __init__.py  config_database.py  config_path.py  path.py  path.yaml
fastapi-project/app/custom/: __init__.py  get_path.py
fastapi-project/app/models/: database.py  model_database.py  model_settings.py  model_tasks.py  settings.py
fastapi-project/app/routers/: router_samplesheet.py  router_settings.py  router_tasks.py  router_workflow.py  samplesheet.py  settings.py
fastapi-project/prepare/: build_mysql_database.sql
services/: pyproject.toml
services/src/: monitor.py
vite-project/: .env  .gitignore  index.html  package.json  tsconfig.app.json  vite.config.ts
vite-project/src/: App.vue  main.ts  shims-element-plus-icons-vue.d.ts  vuex.d.ts
vite-project/src/components/navmenu/: NavMenu.vue  SideNav.vue  TopNav.vue
vite-project/src/router/: index.ts
vite-project/src/views/: Home.vue  Settings.vue
vite-project/src/views/NGS/: IlluminaCreateSamplesheet.vue
vite-project/src/views/ngs/: LVIS.vue  Tasks.vue  Workflows.vue
workflow-monitor/: pyproject.toml
workflow-monitor/src/workflow_monitor/: __main__.py  monitor.py
workflow-monitor/src/workflow_monitor/config/: config_conda.py  config_mysql.py  config_path.py  config_time.py
workflow-monitor/tests/: test_core_fastq.py  test_mysql_settings.py  test_mysql_tasks.py
workflow-monitor/tests/workflow_monitor/: test_mysql_settings.py  test_mysql_tasks.py
(+12 files in other folders)
