[project]
name = "app"
version = "0.1.0"
description = "mysite fastapi app"
authors = [
    {name = "kristoff"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncmy (>=0.2.10,<0.3.0)",
    "databases (>=0.9.0,<0.10.0)",
    "alembic (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

